# DAV

./: .gitignore  .pre-commit-config.yaml  Interactionand Network Dynamics.docx  README.md  config.toml  inspect_emojis.py  pyproject.toml  test_preprocessor.py  ~$teractionand Network Dynamics.docx
data/processed/: all.xlsx  whatsapp_all-20250919-150620.parq  whatsapp_all-20250919-165822.parq  whatsapp_all_enriched-20251110-114652.csv  whatsapp_all_enriched-20251110-114653.parq
dev/1-preprocessing/: main.py
dev/2-categories/2a-prep/: main.py
dev/2-categories/2b-enhance/: 1-messages_over_time_(4_groups).py  2-aggregated_numbers_per_years_(4_groups).py  3-delta_(4_groups).py  4-all_groups_in_one.py  5-added_bar_chart_(2_graphs).py  6-enhanced_bar_chart.py  7-final.py
dev/3-time/plain/: 01-basic_messages_over_time.py  02-messages plotted_over_52_weeks.py  03_added_average.py  04-dac_messages_over_52_weeks.py  05-added_verticals_and_averages.py  06-added_2nd_averages.py  07_added_2020.py  08-added_months_deitched_2020.py  09_added_sunset.py  10_selected_average_of_all_years.py  11-final_incl_sunset.py  12-final.py
dev/3-time/statistics/: 1_acf_month.py  1_acf_week.py  2_decomposition_month.py  2_decomposition_week.py  2b_decomposition_month.py  3_fourier_month.py  3_fourier_week.py  4_scipy_month.py  4_scipy_week.py
dev/4-distribution/: 01-has_emoji.py  02-add_dist_unique_emojies.py  03-dist_unique_emojies_(2_plots).py  04-dist_unique_emojies_(1_combined_plot).py  05-swap_xy.py  06-added_others_to_top25.py  07-punctuation.py  08-added_none.py  09-added_probability-(3_plots).py  10-added_filtering.py  11-emojies_and_probability_(2_plots).py  12_added_legend_top20.py  13-added cumulative_line.py  14-final.py  15-added_pairs.py  16-final_excl_tones.py  17-added_verticle.py  18-only_count_once.py  19_lowered_table.py  20-final_changes.py  main.py
dev/5-relationships/deleted/: data_preparation.py  main.py  plot_manager.py
dev/intermediate_product/: data_editor.py  data_preparation.py  file_manager.py  main.py  plot_manager.py
dev/style_analyzer/: style_analyzer.py  style_analyzer_gen2.py  style_analyzer_gen21.py  style_analyzer_gen3.py  style_analyzer_gen31.py  style_analyzer_min_hf.py  style_analyzer_per_year.py  style_analyzer_per_year_with_elipses.py
dev/toolkit/: constants.py  data_editor.py  data_preparation.py  explorer.py  file_manager.py  find_structures_final.py  find_words_final.py  main_.py  plot_manager.py  re_utilities.py
img/02-categories/: data_preparation.py
img_dev/02-categories/: data_preparation.py
notebooks/: 01-avt_cleaning.ipynb  02-avt_comparing_categories_coupe.ipynb  02-avt_comparing_categories_maap.ipynb  03-avt_time.ipynb  03.2-avt_statistics-of-time.ipynb  04.1-avt_distributions.ipynb  04.2-distribution_fitting.ipynb  05.1-avt_relationships.ipynb  05.2-correlation.ipynb  06.1-dimensionality_reduction.ipynb  06.2-modelling.ipynb  6.3.1-tanach_ingest.ipynb  6.3.2-tanach_preprocess.ipynb  6.3.3-tanach_model.ipynb  6.4_huggingface.ipynb  7.0_social_graphs_dashboard.ipynb
notebooks/dashboard/: dashboard_1.py  dashboard_2.py  dashboard_3.py  dashboard_4.py  wa_streamlit_app.py
src/: __init__.py  bow_whatsapp_maap.py  constants.py  data_editor-new_not_working.py  data_editor-old.py  data_editor.py  data_preparation.py  delete_caches.py  file_manager.py  main-new_not_working.py  main-old.py  main.py  plot_manager-new_not_working.py  plot_manager.py  run_enrich.py  run_enrich_gen2.py  scripts.py  style_analyzer.py  style_analyzer_gen2.py  style_analyzer_gen21.py  style_analyzer_min_hf.py  style_analyzer_per_year.py  style_analyzer_per_year_with_elipses.py
src - failed improvement/: constants.py  data_editor.py  data_preparation.py  file_manager.py  main.py  plot_manager.py  scripts.py
src/1-preprocessing/: main.py
src/2-categories/2a-prep/: main.py
src/2-categories/2b-enhance/: 5-added_bar_chart_(2_graphs).py  main-2.py  main-3.py  main-6.py
src/3-time/plain/: 02-messages plotted_over_52_weeks.py  10_selected_average_of_all_years.py  main-1.py  main-3.py  main-4.py  main-5.py  main-6.py  main-7.py  main-final sunset.py
src/3-time/statistics/: 1_acf_week.py  main-1_acf_month.py  main-2b_decomposition_month.py  main-3_fourier_month.py  main-4_scipy_month.py  main-4_scipy_week.py
src/4-distribution/: 01-has_emoji.py  02-add_dist_unique_emojies.py  03-dist_unique_emojies_(2_plots).py  04-dist_unique_emojies_(1_combined_plot).py  05-swap_xy.py  06-added_others_to_top25.py  07-punctuation.py  11-emojies_and_probability_(2_plots).py  12_added_legend_top20.py  15-added_pairs.py  16-final_excl_tones.py  18-only_count_once.py  19_lowered_table.py
src/dashboard/: README.md  config.py  data_loader.py  streamlit_app.py
src/dashboard/tabs/: tab_category.py  tab_distribution.py  tab_multi_dimensions.py  tab_relationships.py  (+1 more)
src/data_editor/: __init__.py  cleaners.py  core.py  features.py  utilities.py
src/dev/: data_editor.py  data_preparation.py  file_manager.py  plot_manager.py  run_enrich.py  run_enrich_gen2.py  script10.py  script11.py  script2.py  script3.py  script4.py  script5.py  script7.py  style_analyzer_gen4.py  style_analyzer_min_hf.py
src/dev-1/: script11.py
src/scripts/: __init__.py  base.py  pipeline.py  script0.py  script1.py  script10.py  script11.py  script2.py  script3.py  script4.py  script5.py  script6.py  script7.py  utils.py
style_output/: message_summary_minilm.csv  message_summary_mpnet.csv  style_summary_anna_classic.csv  style_summary_anna_plus_my_model.csv  style_summary_my_model.csv
tables/: emojies (highest to lowest)-20251111-215304.csv
(+3 files in other folders)
