[project]
name = "dav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "hdbscan>=0.8.40",
    "ipykernel>=7.1.0",
    "mads-datasets>=0.3.14",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "plotly>=6.3.1",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "transformers>=4.57.0",
    "umap-learn>=0.5.9.post2",
    "wa-analyzer>=0.4.1",
]
