[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dav"
version = "0.1.0"
description = "WhatsApp Chat Analyzer – Data Analysis & Visualization"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# Runtime dependencies
dependencies = [
    "emoji>=2.15.0",
    "hdbscan>=0.8.40",
    "ipykernel>=7.1.0",
    "kaleido>=1.1.0",
    "mads-datasets>=0.3.14",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "plotly>=6.3.1",
    "powerlaw>=1.5",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "transformers>=4.57.0",
    "wa-analyzer>=0.4.1",
]

# ------------------------------------------------------------------
# DEVELOPMENT DEPENDENCIES (lint, type, format, hooks)
# ------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "poethepoet>=0.27.0",

    # Type stubs (required for mypy)
    "pandas-stubs>=2.3.2.250926",
    "types-emoji",
    "types-networkx>=3.5.0.20251001",
    "types-pytz>=2025.2.0.20250809",
    "types-seaborn>=0.13.2.20250914",
]

# ------------------------------------------------------------------
# HATCH (build system)
# ------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/dav"]
